...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/editor_menu_card_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/editor_menu_card_game_name"
                    android:textSize="30sp" />

                <Button
...
                    android:layout_height="wrap_content"
                    android:text="@string/editor_menu_card_button_publish_text"
                    android:backgroundTint="@color/button_back"
                    android:textColor="@color/button_text"
                    android:layout_below="@+id/editor_menu_card_game"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/editor_menu_card_button_delete"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    />

                <Button
...
