<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <EditText
            android:id="@+id/editor_menu_dialog_project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editor_menu_dialog_project_name_hint"
            android:textSize="20sp" />

    </RelativeLayout>
</RelativeLayout>